add in caption and title

--- a/app/client/imageUpload.html
+++ b/app/client/imageUpload.html
@@ -37,8 +37,11 @@
 
 <template name="image">
     <div class="image-container">
-        <div> {{name}} <small>{{size}}</small></div>
+        <div> {{title}} {{name}} <small>{{size}}</small></div>
         <img name="{{name}}" filesize="filesize" orientation="{{orientation}}" class="img-rounded my-image {{#if newImage}}}newImage{{/if}}" src="{{src}}" />
+        {{#if caption}}
+        <div>{{caption}}</div>
+        {{/if}}
     </div>
 </template>
 
